# GalacticWars

./: BackgroundMovementComponent.cpp  BackgroundMovementComponent.h  BackgroundTextureComponent.cpp  BackgroundTextureComponent.h  Bitmask.cpp  Bitmask.h  CMakeLists.txt  Component.h  EnumHash.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameScene.cpp  GameScene.h  KeyboardInput.cpp  KeyboardInput.h  PlayerInputComponent.cpp  PlayerInputComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  Scene.h  SceneStateMachine.cpp  SceneStateMachine.h  TextureComponent.cpp  TextureComponent.h  TransformComponent.cpp  TransformComponent.h  Window.cpp  Window.h  common.h  defs.h  main.cpp
Components/: Inputs.h  Transform.h
Core/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  Event.h  EventManager.h  System.h  SystemManager.h  Types.h
Math/: Vec2.h
Systems/: MovementSystem.cpp  MovementSystem.h
